Fixed horizontal scroll?

--- a/src/main/webapp/css/Booking.css
+++ b/src/main/webapp/css/Booking.css
@@ -48,7 +48,7 @@ padding: 0;
 }
 
 #header {
-	width:100vw;
+	margin: 0;
     max-height: 11vh;
     background-color: black;
 }
@@ -330,7 +330,6 @@ form label{
 }
 
 footer {
-	width:100vw;
     background-color: black;
     color: white;
     padding: 30px;
