--- a/src/main/webapp/css/HomePageStyle.css
+++ b/src/main/webapp/css/HomePageStyle.css
@@ -17,6 +17,8 @@ body {
 #container {
 	
     background-image: linear-gradient(90deg, #000000, rgb(35, 35, 35));
+    padding: 0;
+    margin: 0;
 		/*
 	padding: 0;
 	background-image: url('../res/background.jpg'); 
@@ -25,7 +27,7 @@ body {
 } 
 
 #header {
-	width:100vw;
+	margin: 0;
     max-height: 11vh;
     background-color: black;
 }
@@ -188,7 +190,6 @@ p {
 }
 
 footer {
-	width:100vw;
     background-color: black;
     color: white;
     padding: 30px;
