--- a/src/main/webapp/css/MovieDetailsStyle.css
+++ b/src/main/webapp/css/MovieDetailsStyle.css
@@ -18,7 +18,7 @@ padding: 0;
 }
 
 #header {
-	width:100vw;
+	margin: 0;
     max-height: 11vh;
     background-color: black;
 }
@@ -334,7 +334,6 @@ p {
 }
 
 footer {
-	width:100vw;
     background-color: black;
     color: white;
     padding: 30px;
