--- a/src/main/webapp/css/MovieSearchStyle.css
+++ b/src/main/webapp/css/MovieSearchStyle.css
@@ -17,7 +17,7 @@ padding: 0;
 }
 
 #header {
-	width:100vw;
+	margin: 0;
     height: 10vh;
     background-color: black;
 }
